--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -1,6 +1,6 @@
 <div class="container">
   <footer>
-  Made by <a href="http://www.francocorrea.com.uy">@francorreasosa</a> :)
+  Made by <a href="http://www.francocorrea.com.uy">@francorreasosa</a> – Take a look at the <a href="https://github.com/francocorreasosa/mvd-dot-js">Source.</a>
   </footer>
 </div>
 
