--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Baloo+Bhaina|Inconsolata');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css');
 
 .App {
   max-width: 920px;
@@ -8,4 +9,12 @@
 
 .title {
   font-family: "Baloo Bhaina", "Helvetica Neue", sans-serif;
+}
+
+.status-title {
+  font-weight: lighter;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  margin-left: 8px;
+  text-align: center;
 }
