--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,6 +4,7 @@ header {
   background-position: center;
   color: white;
   min-height: 250px;
+  text-align: center;
 }
 
 .overlay {
@@ -14,7 +15,7 @@ header {
 
 .meetup-name {
   margin: 0 !important;
-  padding-top: 85px;
+  padding-top: 90px;
   font-family: "Baloo Bhaina", "Helvetica Neue", sans-serif;
   text-shadow: 0 5px 30px rgba(0,0,0,0.4);
   font-size: 35px !important;
