--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaina|Inconsolata');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css');
-
 .App {
   max-width: 920px;
   padding: 0 10px;
@@ -15,6 +12,7 @@
   font-weight: lighter;
   text-transform: uppercase;
   letter-spacing: 8px;
+  padding-top: 20px;
   margin-left: 8px;
   text-align: center;
 }
