--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   margin: 0 auto;
 }
 
+a {
+  color: rgb(0, 139, 188);
+}
+
 .title {
   font-family: "Baloo Bhaina", "Helvetica Neue", sans-serif;
 }
@@ -15,4 +19,14 @@
   padding-top: 20px;
   margin-left: 8px;
   text-align: center;
+}
+
+footer {
+  text-align: center;
+  padding-bottom: 30px;
+  font-family: 'Inconsolata', monospace;
+  border-top: 1px solid #ddd;
+  padding-top: 30px;
+  max-width: 900px;
+  margin: 0 auto;
 }
